<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAD8D8">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="198dp"
        android:layout_height="202dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image8" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="126dp"
        android:layout_height="116dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image1" />

    <TextView
        android:id="@+id/titleLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/titleLogo"
        android:textColor="#3E1212"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toStartOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <TextView
        android:id="@+id/titleLuz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/averia_libre_light"
        android:text="@string/titleLuz"
        android:textColor="#571E1E"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <Button
        android:id="@+id/boutonBleu"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#AE87DCB6"
        android:fontFamily="@font/averia_libre_light"
        android:text="@string/boutonBleu"
        android:textColor="#45081E"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleLuz" />

    <Button
        android:id="@+id/boutonJaune"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#AE73C8A2"
        android:fontFamily="@font/averia_libre_light"
        android:text="@string/boutonJaune"
        android:textColor="#45081E"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boutonBleu" />

    <Button
        android:id="@+id/boutonVert"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="#AE5EB18C"
        android:fontFamily="@font/averia_libre_light"
        android:text="@string/boutonVert"
        android:textColor="#45081E"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boutonJaune" />

    <Button
        android:id="@+id/boutonRouge"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#AE489372"
        android:fontFamily="@font/averia_libre_light"
        android:text="@string/boutonRouge"
        android:textColor="#45081E"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boutonVert" />

    <Button
        android:id="@+id/boutonBlanc"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#AE2D684E"
        android:fontFamily="@font/averia_libre_light"
        android:text="@string/boutonBlanc"
        android:textColor="#45081E"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boutonRouge" />
</androidx.constraintlayout.widget.ConstraintLayout>