<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FAD8D8"
    tools:context=".ConnexActivity">

    <TextView
        android:id="@+id/titreConnexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/titreConnexion"
        android:textColor="#4C0D0D"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout5"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titreConnexion">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ident"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textInputLayout5"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout6"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout5">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/motdepasse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:text="@string/textInputLayout6" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/boutonConnexion"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#AE256E4D"
        android:fontFamily="casual"
        android:text="@string/boutonConnexion"
        android:textColor="#321010"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout6" />

    <ImageView
        android:id="@+id/logoConnect"
        android:layout_width="130dp"
        android:layout_height="116dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/image1" />

    <TextView
        android:id="@+id/titleImage2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/titleImage"
        android:textColor="#3E1212"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoConnect" />
    <Button
        android:id="@+id/boutonCreerCpt"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#AE144931"
        android:fontFamily="casual"
        android:text="@string/boutonCreerCpt"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boutonConnexion" />

</androidx.constraintlayout.widget.ConstraintLayout>