<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAD8D8">

    <TextView
        android:id="@+id/textAccueil"
        android:layout_width="296dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/textAccueil"
        android:textColor="#3E1212"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/boutonMusic"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#C66B6B"
        android:fontFamily="@font/averia_libre_light"
        android:text="@string/boutonMusic"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAccueil" />

    <Button
        android:id="@+id/boutonLuz"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#A14D4D"
        android:fontFamily="@font/averia_libre_light"
        android:text="@string/boutonLuz"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boutonMusic" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="415dp"
        android:layout_height="278dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image10" />

    <Button
        android:id="@+id/boutonTemp"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#733838"
        android:text="@string/boutonTemp"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boutonLuz" />

    <Button
        android:id="@+id/aleerte"
        android:layout_width="99dp"
        android:layout_height="36dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#FAD8D8"
        android:fontFamily="@font/architects_daughter"
        android:textAlignment="center"
        android:textColor="#120101"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.899"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boutonTemp"
        tools:text="@string/aleerte" />

    <ImageView
        android:id="@+id/attention"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.964"
        app:layout_constraintStart_toEndOf="@+id/textAccueil"
        app:layout_constraintTop_toBottomOf="@+id/boutonTemp"
        app:srcCompat="@android:drawable/ic_dialog_alert" />

</androidx.constraintlayout.widget.ConstraintLayout>